# dependency-injection

./: .gitignore
docs/second/: main.html  main.md
docs/second/figs/drawio/: actual_mitu_dependency.drawio  mitu_dependency.drawio  so_dependency.drawio
docs/third/: main.md
samples/: Cargo.toml
samples/second/: Cargo.toml
samples/second/src/: lib.rs  main.rs
samples/second/src/application/: app.rs  config.rs  startup.rs
samples/third/: Cargo.toml  expand.rs
samples/third/console-application/: Cargo.toml  interface.md
samples/third/console-application/src/: lib.rs  main.rs
samples/third/console-application/src/action/: add_product.rs  add_user.rs  help.rs  mod.rs
samples/third/console-application/src/app/: config.rs  mod.rs  sample.rs
samples/third/console-application/src/args/: add_product.rs  add_user.rs  mod.rs
samples/third/console-application/src/args/product/: create_product.rs
samples/third/console-application/src/args/user/: create_user.rs  mod.rs
samples/third/console-application/src/cmd/: add_product.rs  add_user.rs  mod.rs  root.rs
samples/third/console-application/src/cmd/sub/: mod.rs  product.rs  user.rs
samples/third/console-application/src/domain/model/: product.rs  user.rs
samples/third/console-application/src/domain/repository/: product.rs  user.rs
samples/third/console-application/src/domain/service/: product.rs  user.rs
samples/third/console-application/src/infrastracture/repository/: product.rs  user.rs
samples/third/console-application/src/infrastracture/service/: product.rs  user.rs
(+17 files in other folders)
